--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -24,21 +24,6 @@
         <!-- Social Icons -->
         <div class="navbar-brand social">{% include social.liquid %}</div>
       {% endif %}
-
-      <!-- Profile Links -->
-      <div class="navbar-brand social">
-        <a href="https://scholar.google.com" target="_blank" title="Google Scholar">
-          <i class="ti ti-google-scholar"></i>
-        </a>
-        <a href="https://linkedin.com" target="_blank" title="LinkedIn">
-          <i class="ti ti-linkedin"></i>
-        </a>
-        <a href="https://twitter.com" target="_blank" title="Twitter">
-          <i class="ti ti-twitter"></i>
-        </a>
-        <!-- Add more icons as needed -->
-      </div>
-
       <!-- Navbar Toggle -->
       <button
         class="navbar-toggler collapsed ml-auto"
@@ -110,7 +95,8 @@
                   </div>
                 </li>
               {% else %}
-                <li class="nav-item {% if page.url contains p.permalink %}active{% endif %}">
+                {% assign parent_link = p.permalink | remove: 'index.html' %}
+                <li class="nav-item {% if page.url contains parent_link %}active{% endif %}">
                   {% if p.permalink contains '/blog/' %}{% assign url = '/blog/' %} {% else %}{% assign url = p.url %}{% endif %}
                   <a class="nav-link" href="{{ url | relative_url }}">
                     {{- p.title }}
