--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -4,7 +4,7 @@
     <div class="container">
       <!-- Google Scholar Icon and Link -->
       {% if page.permalink == '/' %}
-        <a class="navbar-brand" href="https://scholar.google.com/citations?user=YOUR_USER_ID" target="_blank" title="Google Scholar">
+        <a class="navbar-brand" href="https://scholar.google.com/citations?user=LmYhLTsAAAAJ" target="_blank" title="Google Scholar">
           <i class="fab fa-google-scholar"></i>
         </a>
       {% endif %}
