--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -6,7 +6,7 @@
     role="navigation"
   >
     <div class="container">
-      <!-- Google Scholar Icon and Link -->
+      <!-- Google Scholar Icon and Link on About Page Only -->
       {% if page.permalink == '/' %}
       <a
         class="navbar-brand"
