--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -10,11 +10,38 @@
       {% if page.permalink == '/' %}
       <a
         class="navbar-brand"
-        href="https://scholar.google.com/citations?user=YOUR_USER_ID"
+        href="https://scholar.google.com/citations?user=LmYhLTsAAAAJ"
         target="_blank"
         title="Google Scholar"
       >
-        <i class="fab fa-google-scholar"></i>
+        <i class="fab fa-google-scholar fa-lg"></i>
+      </a>
+      <!-- Email Icon and Link -->
+      <a
+        class="navbar-brand"
+        href="mailto:kk5271@rit.edu"
+        target="_blank"
+        title="Email"
+      >
+        <i class="fas fa-envelope fa-lg"></i>
+      </a>
+      <!-- GitHub Icon and Link -->
+      <a
+        class="navbar-brand"
+        href="https://github.com/KaleemNwzKhan"
+        target="_blank"
+        title="GitHub"
+      >
+        <i class="fab fa-github fa-lg"></i>
+      </a>
+      <!-- ResearchGate Icon and Link -->
+      <a
+        class="navbar-brand"
+        href="https://www.researchgate.net/profile/Kaleem-Khan-5"
+        target="_blank"
+        title="ResearchGate"
+      >
+        <i class="fab fa-researchgate fa-lg"></i>
       </a>
       {% endif %}
 
