--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -16,6 +16,17 @@
       >
         <i class="fab fa-google-scholar fa-lg"></i>
       </a>
+
+      <!-- LinkedIn Icon and Link -->
+      <a
+        class="navbar-brand"
+        href="https://www.linkedin.com/in/kaleemnawazkhan6161/"
+        target="_blank"
+        title="LinkedIn"
+      >
+        <i class="fab fa-linkedin fa-lg"></i>
+      </a>
+
       <!-- Email Icon and Link -->
       <a
         class="navbar-brand"
@@ -43,6 +54,9 @@
       >
         <i class="fab fa-researchgate fa-lg"></i>
       </a>
+
+
+
       {% endif %}
 
       {% if page.permalink != '/' %}
