--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -1,87 +1,29 @@
 <header>
   <!-- Nav Bar -->
-  <nav
-    id="navbar"
-    class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}"
-    role="navigation"
-  >
+  <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}" role="navigation">
     <div class="container">
-      <!-- Google Scholar Icon and Link on About Page Only -->
-      {% if page.permalink == '/' %}
-      <a
-        class="navbar-brand"
-        href="https://scholar.google.com/citations?user=LmYhLTsAAAAJ"
-        target="_blank"
-        title="Google Scholar"
-      >
-        <i class="fab fa-google-scholar fa-lg"></i>
-      </a>
-
-      <!-- LinkedIn Icon and Link -->
-      <a
-        class="navbar-brand"
-        href="https://www.linkedin.com/in/kaleemnawazkhan6161/"
-        target="_blank"
-        title="LinkedIn"
-      >
-        <i class="fab fa-linkedin fa-lg"></i>
-      </a>
-
-      <!-- Email Icon and Link -->
-      <a
-        class="navbar-brand"
-        href="mailto:kk5271@rit.edu"
-        target="_blank"
-        title="Email"
-      >
-        <i class="fas fa-envelope fa-lg"></i>
-      </a>
-      <!-- GitHub Icon and Link -->
-      <a
-        class="navbar-brand"
-        href="https://github.com/KaleemNwzKhan"
-        target="_blank"
-        title="GitHub"
-      >
-        <i class="fab fa-github fa-lg"></i>
-      </a>
-      <!-- ResearchGate Icon and Link -->
-      <a
-        class="navbar-brand"
-        href="https://www.researchgate.net/profile/Kaleem-Khan-5"
-        target="_blank"
-        title="ResearchGate"
-      >
-        <i class="fab fa-researchgate fa-lg"></i>
-      </a>
-
-
-
-      {% endif %}
-
       {% if page.permalink != '/' %}
-      <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
-        {% if site.title == 'blank' %}
-        {% if site.first_name %}
-        <span class="font-weight-bold">
-          {{- site.first_name -}}
-        </span>
-        {% endif %}
-        {% if site.middle_name %}
-        {{- site.middle_name -}}
-        {% endif %}
-        {% if site.last_name %}
-        {{- site.last_name -}}
-        {% endif %}
-        {% else %}
-        {{- site.title -}}
-        {% endif %}
-      </a>
+        <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
+          {% if site.title == 'blank' %}
+            {% if site.first_name %}
+              <span class="font-weight-bold">
+                {{- site.first_name -}}
+              </span>
+            {% endif %}
+            {% if site.middle_name %}
+              {{- site.middle_name -}}
+            {% endif %}
+            {% if site.last_name %}
+              {{- site.last_name -}}
+            {% endif %}
+          {% else %}
+            {{- site.title -}}
+          {% endif %}
+        </a>
       {% elsif site.enable_navbar_social %}
-      <!-- Social Icons -->
-      <div class="navbar-brand social">{% include social.liquid %}</div>
+        <!-- Social Icons -->
+        <div class="navbar-brand social">{% include social.liquid %}</div>
       {% endif %}
-
       <!-- Navbar Toggle -->
       <button
         class="navbar-toggler collapsed ml-auto"
@@ -101,9 +43,7 @@
       <div class="collapse navbar-collapse text-right" id="navbarNav">
         <ul class="navbar-nav ml-auto flex-nowrap">
           {% for page in site.pages %}
-          {% if page.permalink == '/' %}
-          {% assign about_title = page.title %}
-          {% endif %}
+            {% if page.permalink == '/' %} {% assign about_title = page.title %} {% endif %}
           {% endfor %}
 
           <!-- About -->
@@ -111,7 +51,7 @@
             <a class="nav-link" href="{{ '/' | relative_url }}">
               {{- about_title }}
               {% if page.permalink == '/' %}
-              <span class="sr-only">(current)</span>
+                <span class="sr-only">(current)</span>
               {% endif %}
             </a>
           </li>
@@ -119,92 +59,83 @@
           <!-- Other pages -->
           {% assign sorted_pages = site.pages | sort: 'nav_order' %}
           {% for p in sorted_pages %}
-          {% if p.nav and p.autogen == null %}
-          {% if p.dropdown %}
-          {% assign has_active_child = false %}
-          {% for child in p.children %}
-          {% if page.title == child.title %}
-          {% assign has_active_child = true %}
-          {% endif %}
-          {% endfor %}
-          <li
-            class="nav-item dropdown {% if page.title == p.title or has_active_child %}active{% endif %}"
-          >
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              {{- p.title }}
-              {% if page.title == p.title or has_active_child %}
-              <span class="sr-only">(current)</span>
-              {% endif %}
-            </a>
-            <div
-              class="dropdown-menu dropdown-menu-right"
-              aria-labelledby="navbarDropdown"
-            >
-              {% for child in p.children %}
-              {% if child.title == 'divider' %}
-              <div class="dropdown-divider"></div>
+            {% if p.nav and p.autogen == null %}
+              {% if p.dropdown %}
+                {% assign has_active_child = false %}
+                {% for child in p.children %}
+                  {% if page.title == child.title %}
+                    {% assign has_active_child = true %}
+                  {% endif %}
+                {% endfor %}
+                <li class="nav-item dropdown {% if page.title == p.title or has_active_child %}active{% endif %}">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    {{- p.title }}
+                    {% if page.title == p.title or has_active_child %}
+                      <span class="sr-only">(current)</span>
+                    {% endif %}
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    {% for child in p.children %}
+                      {% if child.title == 'divider' %}
+                        <div class="dropdown-divider"></div>
+                      {% else %}
+                        <a class="dropdown-item {% if page.title == child.title %}active{% endif %}" href="{{ child.permalink | relative_url }}">
+                          {{- child.title -}}
+                        </a>
+                      {% endif %}
+                    {% endfor %}
+                  </div>
+                </li>
               {% else %}
-              <a
-                class="dropdown-item {% if page.title == child.title %}active{% endif %}"
-                href="{{ child.permalink | relative_url }}"
-              >
-                {{- child.title -}}
-              </a>
+                {% assign parent_link = p.permalink | remove: 'index.html' %}
+                <li class="nav-item {% if page.url contains parent_link %}active{% endif %}">
+                  {% if p.permalink contains '/blog/' %}{% assign url = '/blog/' %} {% else %}{% assign url = p.url %}{% endif %}
+                  <a class="nav-link" href="{{ url | relative_url }}">
+                    {{- p.title }}
+                    {% if page.url contains p.url %}
+                      <span class="sr-only">(current)</span>
+                    {% endif %}
+                  </a>
+                </li>
               {% endif %}
-              {% endfor %}
-            </div>
-          </li>
-          {% else %}
-          <li class="nav-item {% if page.url contains p.permalink %}active{% endif %}">
-            {% if p.permalink contains '/blog/' %}{% assign url = '/blog/' %}
-            {% else %}{% assign url = p.url %}
             {% endif %}
-            <a class="nav-link" href="{{ url | relative_url }}">
-              {{- p.title }}
-              {% if page.url contains p.url %}
-              <span class="sr-only">(current)</span>
-              {% endif %}
-            </a>
-          </li>
-          {% endif %}
-          {% endif %}
           {% endfor %}
           {% if site.search_enabled %}
-          <!-- Search -->
-          <li class="nav-item">
-            <button id="search-toggle" title="Search" onclick="openSearchModal()">
-              <span class="nav-link">ctrl k <i class="ti ti-search"></i></span>
-            </button>
-          </li>
+            <!-- Search -->
+            <li class="nav-item">
+              <button id="search-toggle" title="Search" onclick="openSearchModal()">
+                <span class="nav-link">ctrl k <i class="ti ti-search"></i></span>
+              </button>
+            </li>
           {% endif %}
           {% if site.enable_darkmode %}
-          <!-- Toggle theme mode -->
-          <li class="toggle-container">
-            <button id="light-toggle" title="Change theme">
-              <i class="ti ti-sun-moon" id="light-toggle-system"></i>
-              <i class="ti ti-moon-filled" id="light-toggle-dark"></i>
-              <i class="ti ti-sun-filled" id="light-toggle-light"></i>
-            </button>
-          </li>
+            <!-- Toogle theme mode -->
+            <li class="toggle-container">
+              <button id="light-toggle" title="Change theme">
+                <i class="ti ti-sun-moon" id="light-toggle-system"></i>
+                <i class="ti ti-moon-filled" id="light-toggle-dark"></i>
+                <i class="ti ti-sun-filled" id="light-toggle-light"></i>
+              </button>
+            </li>
           {% endif %}
         </ul>
       </div>
     </div>
   </nav>
   {% if site.enable_progressbar %}
-  <!-- Scrolling Progress Bar -->
-  <progress id="progress" value="0">
-    <div class="progress-container">
-      <span class="progress-bar"></span>
-    </div>
-  </progress>
+    <!-- Scrolling Progress Bar -->
+    <progress id="progress" value="0">
+      <div class="progress-container">
+        <span class="progress-bar"></span>
+      </div>
+    </progress>
   {% endif %}
 </header>
