--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -28,7 +28,7 @@ layout: default
           {% capture sizes %}(min-width: {{site.max_width}}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 376px)
       10vw, 60vw"{% endcapture %}
           {%
-            include figure.liquid loading="eager" path=profile_image_path class=profile_image_class sizes=sizes alt=page.profile.image
+            include figure.liquid loading="eager" path=profile_image_path class=profile_image_class sizes="60px" style="max-width: 60px;" alt=page.profile.image
             cache_bust=true
           %}
         {% endif %}
