--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -25,8 +25,7 @@ layout: default
             {% assign profile_image_class = 'img-fluid z-depth-1
       rounded' %}
           {% endif %}
-          {% capture sizes %}(min-width: {{site.max_width}}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 376px)
-      10vw, 60vw"{% endcapture %}
+          {% capture sizes %}(min-width: 768px) 100px, 80px{% endcapture %}
           {%
             include figure.liquid loading="eager" path=profile_image_path class=profile_image_class sizes="60px" style="max-width: 60px;" alt=page.profile.image
             cache_bust=true
