--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -5,8 +5,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">
       {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-        {{ site.last_name }}
+        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}
       {% else %}
         {{ site.title }}
       {% endif %}
@@ -22,20 +21,12 @@ layout: default
           {% if page.profile.image_circular %}
             {% assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' %}
           {% else %}
-            {% assign profile_image_class = 'img-fluid z-depth-1
-      rounded' %}
+            {% assign profile_image_class = 'img-fluid z-depth-1 rounded' %}
           {% endif %}
-{% capture sizes %}(min-width: 768px) 75px, 60px{% endcapture %}
-{%
-  include figure.liquid
-  loading="eager"
-  path=profile_image_path
-  class=profile_image_class
-  sizes="75px"
-  style="max-width: 75px;"
-  alt=page.profile.image
-  cache_bust=true
-%}
+          <img src="{{ profile_image_path | relative_url }}"
+               alt="{{ page.profile.image }}"
+               class="{{ profile_image_class }}"
+               style="max-width: 75px; height: auto;" />
         {% endif %}
         {% if page.profile.more_info %}
           <div class="more-info">{{ page.profile.more_info }}</div>
@@ -73,7 +64,6 @@ layout: default
     {% if page.social %}
       <div class="social">
         <div class="contact-icons">{% include social.liquid %}</div>
-
         <div class="contact-note">{{ site.contact_note }}</div>
       </div>
     {% endif %}
