--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -15,7 +15,7 @@ layout: default
 
   <article>
     {% if page.profile %}
-      <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
+<div class="profile" style="float: right; display: inline-block; margin-left: 20px;">
         {% if page.profile.image %}
           {% assign profile_image_path = page.profile.image | prepend: 'assets/img/' %}
           {% if page.profile.image_circular %}
